--- a/image.html
+++ b/image.html
@@ -6,13 +6,13 @@
     </head>
     <body>
         <div class="headerLinks">
-            <a href="image.html">Images</a>
-            <a href="advanced.html">Advanced Search</a>
+            <a href="index.html">Go back to Google Search</a>
         </div>
         <div class="centered">
-            <form class="search" action="https://www.google.com/search">
+            <form action="https://www.google.com/search">
                 <input class="textBox" type="text" name="q">
-                <input class="submitBtn" type="submit" value="Google Search">
+                <input class="submitBtn" type="submit" value="Google Image Search">
+                <input name="udm" value="2" type="hidden">
             </form>
         </div>
     </body>
