--- a/advanced.html
+++ b/advanced.html
@@ -8,30 +8,32 @@
         <div class="headerLinks">
             <a href="index.html">Go back to Google Search</a>
         </div>
-        <div>
+        <div class="advancedForm">
             <form action="https://www.google.com/search">
                 <h3>Find Pages With...</h3>
                     <table>
                         <tbody>
                             <tr>
                                 <td>all these words:</td>
-                                <td><input type="text" name="as_q"></td>
+                                <td><input class="advField" type="text" name="as_q"></td>
                             </tr>
                             <tr>
                                 <td>this exact word or phrase:</td>
-                                <td><input type="text" name="as_epq"></td>
+                                <td><input class="advField" type="text" name="as_epq"></td>
                             </tr>
                             <tr>
                                 <td>any of these words:</td>
-                                <td><input type="text" name="as_oq"></td>
+                                <td><input class="advField" type="text" name="as_oq"></td>
                             </tr>
                             <tr>
                                 <td>none of these words:</td>
-                                <td><input type="text" name="as_eq"></td>
+                                <td><input class="advField" type="text" name="as_eq"></td>
                             </tr>
                         </tbody>
                     </table>
-                    <input id="advBtn" type="submit" value="Advanced Search">
+                    <div id="advanced">
+                        <input id="advBtn" type="submit" value="Advanced Search">
+                    </div>
             </form>
         </div>
     </body>
