Added I'm Feeling Lucky button and final step completed

--- a/image.html
+++ b/image.html
@@ -11,7 +11,7 @@
         <div class="centered">
             <form action="https://www.google.com/search">
                 <input class="textBox" type="text" name="q">
-                <input class="submitBtn" type="submit" value="Google Image Search">
+                <input class="submitBtn" type="submit" value="Image Search">
                 <input name="udm" value="2" type="hidden">
             </form>
         </div>
