--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <form class="search" action="https://www.google.com/search">
                 <input class="textBox" type="text" name="q">
                 <input class="submitBtn" type="submit" value="Google Search">
+                <input class="submitBtn" type="submit" name="btnI" value="I'm Feeling Lucky">
             </form>
         </div>
     </body>
